Fix navbar overlap on front & contact pages, improve footer layout

--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 /* @import url("https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2-0/css/ionicons.min.css"); */
 #home {
-  padding-top: 80px; /* a little more than navbar height */
+  padding-top: 60px; /* a little more than navbar height */
+}
+body {
+  padding-top: 7rem; /* ~3cm space below navbar */
 }
 :root {
   --color-priamary2: #0c54a4;
@@ -228,6 +231,7 @@ section {
   #home .home-header {
     /* padding: 4rem 2rem; */
     padding: 2rem;
+    padding-top: 70px;
   }
   #home h1 {
     font-size: 62px;
@@ -343,6 +347,7 @@ section {
     padding: 0rem 4rem;
     align-self: center;
   }
+
   .h2 {
     color: var(--color-secondary);
     text-align: center;
@@ -384,3 +389,4 @@ section {
   flex: 1; /* each column takes equal width */
   min-width: 200px; /* prevents shrinking too much */
 }
+
